--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,8 +3,8 @@
 
 menu:
 # - {name: 'Projects', url: ''}
-- {name: 'Notes',     url: 'notes'}
-- {name: 'About Me',    url: 'me'}
+- {name: 'Notes.',     url: 'notes'}
+- {name: 'Me.',    url: 'me'}
 
 #-------------------------------
 # Projects Section
