--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,13 +10,13 @@ menu:
 # Projects Section
 
 projects:
-- {name: 'Book of Ashes',   url: 'BookOfAshes'}
-- {name: 'Moving Manor',   url: 'MovingManor'}
-- {name: 'Playing with Systems', url: 'Systems'}
-- {name: 'Discordant',  url: 'Discordant'}
-- {name: 'Crisis',  url: 'Crisis'}
-- {name: 'Waste Land',  url: 'Wasteland'}
-- {name: 'Split',  url: 'Split'}
+- {name: 'Book of Ashes', description: 'Tactical RPG',  url: 'BookOfAshes'}
+- {name: 'Discordant',  description: 'Rhythm-based Bullet Hell', url: 'Discordant'}
+# - {name: 'Arcana',   url: 'Arcana'}
+# - {name: 'Playing with Systems', description: 'Graduate Thesis', url: 'Systems'}
+- {name: 'Crisis',  description: 'Boardgame', url: 'Crisis'}
+- {name: 'Waste Land',  description: 'Boardgame', url: 'Wasteland'}
+- {name: 'Split', description: 'Game Jam Game', url: 'Split'}
 
 #-------------------------------
 # Contact Section
@@ -34,7 +34,7 @@ social:
 # NOTE: Providing SEO information will make this website more searchable on the internet.
 
 seo:
-  description: 'Eetu Leppälä game desiner design portfolio UI/UX tactical RPG boardgames hire experienced'
+  description: 'Eetu Leppälä game desiner balancing design portfolio UI/UX tactical RPG boardgames hire experienced'
   rel-author: 'https://plus.google.com/u/0/#'
   rel-publisher: 'https://plus.google.com/u/0/#'
 
