--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -34,7 +34,7 @@ social:
 # NOTE: Providing SEO information will make this website more searchable on the internet.
 
 seo:
-  description: 'Eetu Leppälä game desiner balancing design portfolio UI/UX tactical RPG boardgames hire experienced'
+  description: 'Eetu Netti game desiner balancing design portfolio UI/UX tactical RPG boardgames hire experienced'
   rel-author: 'https://plus.google.com/u/0/#'
   rel-publisher: 'https://plus.google.com/u/0/#'
 
